--- a/package.json
+++ b/package.json
@@ -14,16 +14,25 @@
     "@fullcalendar/daygrid": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
+    "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.2",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.1",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@react-oauth/google": "^0.12.1",
+    "@react-pdf/renderer": "^4.0.0",
     "@shadcn/ui": "^0.0.4",
+    "@tanstack/react-table": "^8.20.5",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "fullcalendar": "^6.1.15",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.9.3",
     "joi": "^17.13.3",
+    "jsdf": "^0.3.2",
+    "jspdf": "^2.5.2",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.454.0",
     "react": "^18.3.1",
@@ -32,7 +41,8 @@
     "react-toastify": "^10.0.6",
     "reactflow": "^11.11.4",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uninstall": "^0.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
