--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "pdfmake": "^0.2.15",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
     "react-toastify": "^10.0.6",
     "reactflow": "^11.11.4",
