--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@react-oauth/google": "^0.12.1",
     "@react-pdf/renderer": "^4.0.0",
     "@shadcn/ui": "^0.0.4",
+    "@stripe/react-stripe-js": "^2.8.1",
+    "@stripe/stripe-js": "^4.9.0",
     "@tanstack/react-table": "^8.20.5",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
