--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "fullcalendar": "^6.1.15",
     "joi": "^17.13.3",
     "jspdf": "^2.5.2",
