--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.1",
     "@react-oauth/google": "^0.12.1",
     "@react-pdf/renderer": "^4.0.0",
     "@shadcn/ui": "^0.0.4",
